# tradermade-Cpp-sdk

./: .gitignore  CMakeLists.txt  README.md  TraderMadeSDK.cpp  TraderMadeSDK.h  market-data-with-c++-sdk.md
examples/currencyConversion/: currencyConversion.cpp
examples/dataExports/: dataAsPandasDataFrame.cpp
examples/historicalData/: historicalRates.cpp  hourlyHistoricalData.cpp  minuteHistoricalData.cpp  tickHistoricalData.cpp  tickHistoricalDataSample.cpp  timeSeriesData.cpp
examples/liveData/: liveExchangeRates.cpp
examples/marketInformation/: marketOpenStatus.cpp  marketOpeningTiming.cpp
examples/referenceData/: listOfAvailableCfd.cpp  listOfHistoricalCurrencies.cpp  listOfLiveCryptoCurrencies.cpp  listOfLiveCurrencies.cpp  listOfStreamingInstruments.cpp
